--- a/app/styles/src/search.scss
+++ b/app/styles/src/search.scss
@@ -1,6 +1,13 @@
 @import "compass/css3/border-radius";
 @import "common";
 
+$searchDetailPadding : 90px;
+
+.search-view {
+  overflow-y: auto;
+  height: calc(100% - 54px);
+}
+
 .search-bar {
   width: 255px;
   padding: 0px 15px;
@@ -39,8 +46,7 @@
   height: 45px;
   border-bottom: 1px solid #E7E7E7;
   .search-image {
-    background-image: center center;
-    background-size: cover cover;
+    background-size: contain;
     width: 77px;
     height: 45px;
     float: left;
