--- a/app/views/search.html
+++ b/app/views/search.html
@@ -3,65 +3,39 @@
          ng-change="getSuggestions()"
          placeholder="Search by performer, event, or venue">
 </header>
-<p>{{ searchResults.events }}</p>
-<p>{{ searchResults.performers }}</p>
-<p>{{ searchResults.venues }}</p>
-<div class="category-divider">
-  <h5>Performers</h5>
-</div>
-<div class="search-cell">
-  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/1436/phish-f48244/medium.jpg)"></div>
-  <div class="search-details"><h3>Phish</h3></div>
-</div>
-<div class="search-cell">
-  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/5137/arcade-fire-f63c10/medium.jpg)"></div>
-  <div class="search-details"><h3>Arcade Fire</h3></div>
-</div>
-<div class="search-cell">
-  <div class="search-image" style="background: url(http://cdn.chairnerd.com/images/performers/4275/bruce-springsteen-49a1bd/medium.jpg)"></div>
-  <div class="search-details"><h3>Bruce Springsteen</h3></div>
-</div>
-<div class="category-divider">
-  <h5>Venues</h5>
-</div>
-<div class="search-cell">
-  <div class="search-image" style="background: url(http://maps.googleapis.com/maps/api/staticmap?center=40.6844,-73.9777&zoom=11&size=140x90&sensor=false)"></div>
-  <div class="search-details"><h3>Barclays Center</h3></div>
-</div>
-<div class="search-cell">
-  <div class="search-image" style="background: url(http://maps.googleapis.com/maps/api/staticmap?center=40.75,-73.9942&zoom=11&size=140x90&sensor=false)"></div>
-  <div class="search-details"><h3>Madison Square Garden</h3></div>
-</div>
-<div class="category-divider">
-  <h5>Events Near New York, NY</h5>
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 6</h4>
-    <h5>Thu 7:00p</h5>
+<div class="search-view">
+  <div class="category-divider">
+    <h5>Performers</h5>
   </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
+  <div class="search-cells performer-cells" ng-repeat="performer in searchResults.performers">
+    <div class="search-cell">
+      <div class="search-image" ng-style="{'background-image': (performer.image ? 'url(' + performer.image + ')' : 'none')}"></div>
+      <div class="search-details"><h3>{{ performer.short_name }}</h3></div>
+    </div>
   </div>
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>Fri 8:30p</h5>
+  <div class="category-divider">
+    <h5>Venues</h5>
   </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
+  <div class="search-cells venue-cells" ng-repeat="venue in searchResults.venues">
+    <div class="search-cell">
+      <div class="search-image"
+      ng-style="{'background': 'url(http://maps.googleapis.com/maps/api/staticmap?center=' + venue.location.lat + ',' + venue.location.lon +'&zoom=11&size=140x90&sensor=false)'}"></div>
+      <div class="search-details"><h3>{{ venue.name }}</h3></div>
+    </div>
   </div>
-</div>
-<div class="search-cell">
-  <div class="search-event-date">
-    <h4>Mar 7</h4>
-    <h5>TBA</h5>
+  <div class="category-divider">
+    <h5>Events Near New York, NY</h5>
   </div>
-  <div class="search-event-details">
-    <h4>Lorde with Log-Fang</h4>
-    <h5>Roseland Ballroom, New York, NY</h5>
+  <div class="search-cells nearby-cells" ng-repeat="event in searchResults.events">
+    <div class="search-cell">
+      <div class="search-event-date">
+        <h4>{{ event.datetime_local | date:'MMM d' }}</h4>
+        <h5>{{ event.datetime_local | date:'EEE h:mm a' }}</h5>
+      </div>
+      <div class="search-event-details">
+        <h4>{{ event.short_title }}</h4>
+        <h5>{{ event.venue.name }}, {{ event.venue.display_location }}</h5>
+      </div>
+    </div>
   </div>
 </div>
